fix: mini-loader size and stale time in shifts

--- a/src/components/ShiftCard/EnrollModal/EnrollModal.css
+++ b/src/components/ShiftCard/EnrollModal/EnrollModal.css
@@ -19,3 +19,9 @@
     width: 1.5rem;
     height: 1.5rem;
 }
+
+
+.enroll-modal-cont .mini-loader-cont .loader {
+    width: 100%;
+    height: 100%;
+  }
